Correct HTML files
After validating files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
 	<!-- Custom styles for this template go here -->
-	<link rel="stylesheet" href="css/normalize.css#">
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/styles.css">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -85,7 +85,6 @@
 							<p>MisterSpex’s spin-off contactlenses e-commerce shop.</p>
 							<p class="label-big">2021</p>
 							<p class="label-role">UI Designer</p>
-						</a>
 					</div><!--end Project Content-->
 				</div><!--end Project 1-->
 				<div class="project"><!--Open Project 2-->
@@ -101,7 +100,6 @@
 							<p>Setting is an online marketplace for offices in Berlin.</p>
 							<p class="label-big">2020-2021</p>
 							<p class="label-role">UX/UI Designer</p>
-						</a>
 					</div><!--end Project Content 2-->
 				</div><!--end Project 2-->
 				<div class="project"><!--Open Project 3-->
@@ -112,11 +110,10 @@
 						</picture>
 					</a>
 					<div class="project-content"><!--open Project Content 3-->
-							<h2><a href="shore.html">Shore</h2></a>
+							<h2><a href="shore.html">Shore</a></h2>
 							<p>App case study for non-professional watersports aficionados.</p>
 							<p class="label-big">2020</p>
 							<p class="label-role">UX/UI Designer</p>
-						</a>
 					</div><!--end Project Content 3-->
 				</div><!--end Project 3-->
 				<div class="project"><!--Open Project 4-->
@@ -125,13 +122,12 @@
 							<source srcset="img/home/artconnect_328x242.png" media="(max-width:767px)">
 							<img src="img/home/artconnect_640x471.png" alt="Linsenpate">
 						</picture>
-					</a>
+					</a>	
 					<div class="project-content">
-							<h2><a href="shore.html">Artconnect</a></h2>
+							<h2><a href="artconnect.html">Artconnect</a></h2>
 							<p>Artconnect is a global social network for creatives.</p>
 							<p class="label-big">2011-2020</p>
 							<p class="label-role">Founder, Product Manager, UX/UI Design</p>
-						</a>
 					</div><!--end Project Content 4-->
 				</div><!--end Project 4-->
 			</div>
