--- a/setting.html
+++ b/setting.html
@@ -67,12 +67,12 @@
                     </p>
                 <!--End Text on Right Column-->
                 <div class="project-cta"><!--Open CTAs on Right Column-->
-                    <a class="btn btn-primary project-cta" href="#" target="_blank" role="button">Keep on reading</a></li>
-                    <a class="btn btn-secondary project-cta" href="https://setting.io/" target="_blank" role="button">Visit setting.io</a></li>
+                    <a class="btn btn-primary project-cta" href="#" target="_blank" role="button">Keep on reading</a>
+                    <a class="btn btn-secondary project-cta" href="https://setting.io/" target="_blank" role="button">Visit setting.io</a>
                 </div><!--End CTAs on Right Column-->
             </div><!--Close right column-->
             <div class="st-intro-right"><!--Open Left Column-->
-                <iframe style="border: 0px;" width="100%" height="700"
+                <iframe style="border: 0px;" width="500" height="700"
                     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FOoYnOXz8ZH1D3ErkTkL78J%2FSetting-Prototype-UI%3Fnode-id%3D2187%253A449%26viewport%3D89%252C406%252C0.02984790876507759%26scaling%3Dscale-down%26page-id%3D2187%253A448"
                     allowfullscreen></iframe>
             </div><!--Close Left Column-->
@@ -159,7 +159,7 @@
                 <p>Although it was only required from me to build wireframes, I decided to build a simple prototype. The reason behind was that the sign up flow was unclear to me. Thanks to this, we discovered that the sign up flow and functionality needed to be changed and we removed it temporarily. 
                 <br>Click on the blue areas to navigate through the prototype.</p>
                 <div class="iframe"><!--Open Desktop iFrame-->
-                    <iframe style="border: none;" width="100%" height="800"
+                    <iframe style="border: none;" width="1200" height="800"
                         src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FOoYnOXz8ZH1D3ErkTkL78J%2FSetting-Prototype-UI%3Fnode-id%3D753%253A681%26viewport%3D442%252C446%252C0.020680343732237816%26scaling%3Dscale-down%26page-id%3D753%253A1"
                         allowfullscreen>
                     </iframe>
@@ -171,11 +171,12 @@
                 <h3>Design System</h3>
                 <p>I created a Design System in a format that could be printed or sent to anyone who needed to make use of it. We have currently already used it for the photographer to understand the look & feel of the company.
                 <br>Use your right and left keyboard arrows to navigate through the Design System</p>
-             <div class="iframe"><!--Open Design System iFrame-->
-                <iframe style="border: none;" width="100%" height="800"
+                <div class="iframe"><!--Open Design System iFrame-->
+                <iframe style="border: none;" width="1200" height="800"
                     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FOoYnOXz8ZH1D3ErkTkL78J%2FSetting-Prototype-UI%3Fnode-id%3D2366%253A3%26viewport%3D44%252C462%252C0.016561182215809822%26scaling%3Dcontain%26page-id%3D1997%253A3897"
                     allowfullscreen>
                 </iframe>
+                </div>
             </div>
         </section><!--End of Design System Prototype-->
     </main>
