Apply flex to navigation

--- a/linsenpate.html
+++ b/linsenpate.html
@@ -32,15 +32,13 @@
         <div id="main-nav">
             <a class="logo" href="index.html">Júlia Mari Bernaus</a>
             <nav>
-                <ul>
-                    <li><a class="top-nav d-none d-md-block" href="index.html#work">Work</a></li>
-                    <li><a class="top-nav d-none d-md-block" href="index.html#about">About</a></li>
-                    <li><a class="top-nav d-none d-md-block" href="index.html#contact">Contact</a></li>
-                    <li><a class="top-nav d-none d-md-block" href="https://www.linkedin.com/in/juliamaribernaus/"
-                            target="_blank">LinkedIn</a></li>
-                    <li><a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
-                            role="button">Get in touch</a></li>
-                </ul>
+                <a class="top-nav d-none d-md-block" href="index.html#work">Work</a>
+                <a class="top-nav d-none d-md-block" href="index.html#about">About</a>
+                <a class="top-nav d-none d-md-block" href="index.html#contact">Contact</a>
+                <a class="top-nav d-none d-md-block" href="https://www.linkedin.com/in/juliamaribernaus/"
+                    target="_blank">LinkedIn</a>
+                <a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
+                    role="button">Get in touch</a>
             </nav>
         </div>
         <!--end header-->
