--- a/setting.html
+++ b/setting.html
@@ -69,8 +69,8 @@
                     <a class="btn btn-secondary project-cta" href="https://setting.io/" target="_blank" role="button">Visit setting.io</a>
                 </div><!--End CTAs on Right Column-->
             </div><!--Close right column-->
-            <div class="st-intro-right"><!--Open Left Column-->
-                <iframe style="border: 0px;" width="500" height="700"
+            <div class="st-intro-right d-none d-sm-block" ><!--Open Left Column-->
+                <iframe style="border: 0px;" width="400" height="700"
                     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FOoYnOXz8ZH1D3ErkTkL78J%2FSetting-Prototype-UI%3Fnode-id%3D2187%253A449%26viewport%3D89%252C406%252C0.02984790876507759%26scaling%3Dscale-down%26page-id%3D2187%253A448"
                     allowfullscreen></iframe>
             </div><!--Close Left Column-->
@@ -151,7 +151,7 @@
             </ul>
             </div><!--End of Right Column-->
         </section>
-        <section id="desktop-prototype"><!--Open Desktop Prototype-->
+        <section id="desktop-prototype" class="d-none d-sm-block" ><!--Open Desktop Prototype-->
             <div class="container">
                 <h3>Desktop Prototype</h3>
                 <p>Although it was only required from me to build wireframes, I decided to build a simple prototype. The reason behind was that the sign up flow was unclear to me. Thanks to this, we discovered that the sign up flow and functionality needed to be changed and we removed it temporarily. 
@@ -164,7 +164,7 @@
                 </div>
             </div>
         </section>
-        <section id="design-system"><!--Open Design System Prototype-->
+        <section id="design-system" class="d-none d-sm-block"><!--Open Design System Prototype-->
             <div class="container">
                 <h3>Design System</h3>
                 <p>I created a Design System in a format that could be printed or sent to anyone who needed to make use of it. We have currently already used it for the photographer to understand the look & feel of the company.
