Added animation to top nav bar

--- a/index.html
+++ b/index.html
@@ -28,15 +28,20 @@
 	<!-- Header/Navigation -->
 	<header>
 		<div id="main-nav">
-			<a class="logo" href="index.html">Júlia Mari Bernaus</a>
+			<div class="brackets">
+				<a class="logo" href="index.html">Júlia Mari Bernaus</a>
+			</div>
 			<nav>
-				<a class="top-nav d-none d-md-block" href="index.html#work">Work</a>
-				<a class="top-nav d-none d-md-block" href="index.html#about">About</a>
-				<a class="top-nav d-none d-md-block" href="index.html#contact">Contact</a>
-				<a class="top-nav d-none d-md-block" href="https://www.linkedin.com/in/juliamaribernaus/"
-					target="_blank">LinkedIn</a>
-				<a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
-					role="button">Get in touch</a>
+				<div class="nav">
+					<div class="brackets">
+						<a class="top-nav d-none d-md-block" href="index.html#work">Work</a>
+						<a class="top-nav d-none d-md-block" href="index.html#about">About</a>
+						<a class="top-nav d-none d-md-block" href="index.html#contact">Contact</a>
+						<a class="top-nav d-none d-md-block " href="https://www.linkedin.com/in/juliamaribernaus/"
+							target="_blank">LinkedIn</a>
+					</div>
+						<a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank" role="button">Get in touch</a>
+				</div>
 			</nav>
 		</div>
 		<!--end header-->
@@ -53,7 +58,7 @@
 			<!--end pic-->
 			<div class="hero-cta">
 				<!--Open Column Left -->
-				<h1>Hi! I am <span style="color: #FFA7A7">Júlia</span>, a Berlin based <span style="color: #0C0093;"> UX/UI Designer</span> and former CEO at <span style="color: #FEED50"><a href="https://www.artconnect.com" target="_blank"></a>Artconnect</span>.</h1>
+				<h1>Hi! I am <span class="name">Júlia</span>, a Berlin based <span class="job"> UX/UI Designer</span> and former CEO at <span class="past"><a href="https://www.artconnect.com" target="_blank"></a>Artconnect</span>.</h1>
 				<a class="btn btn-primary" href="#work" role="button">Check my work</a>
 			</div>
 			<!--end intro-->
