--- a/linsenpate.html
+++ b/linsenpate.html
@@ -30,20 +30,25 @@
 <body><!-- Header/Navigation -->
     <header>
         <div id="main-nav">
-            <a class="logo" href="index.html">Júlia Mari Bernaus</a>
+            <div class="brackets">
+                <a class="logo" href="index.html">Júlia Mari Bernaus</a>
+            </div>
             <nav>
-                <a class="top-nav d-none d-md-block" href="index.html#work">Work</a>
-                <a class="top-nav d-none d-md-block" href="index.html#about">About</a>
-                <a class="top-nav d-none d-md-block" href="index.html#contact">Contact</a>
-                <a class="top-nav d-none d-md-block" href="https://www.linkedin.com/in/juliamaribernaus/"
-                    target="_blank">LinkedIn</a>
-                <a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
-                    role="button">Get in touch</a>
+                <div class="nav">
+                    <div class="brackets">
+                        <a class="top-nav d-none d-md-block" href="index.html#work">Work</a>
+                        <a class="top-nav d-none d-md-block" href="index.html#about">About</a>
+                        <a class="top-nav d-none d-md-block" href="index.html#contact">Contact</a>
+                        <a class="top-nav d-none d-md-block " href="https://www.linkedin.com/in/juliamaribernaus/"
+                            target="_blank">LinkedIn</a>
+                    </div>
+                    <a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
+                        role="button">Get in touch</a>
+                </div>
             </nav>
         </div>
         <!--end header-->
     </header>
-
     <!-- Hero -->
     <main>
         <section id="lp-intro" class="lp-intro-flex-grid container"><!--Open Intro--> 
