Created Media Queries in Home Page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 	<!-- Custom styles for this template go here -->
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300;700&display=swap"
+		rel="stylesheet">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
@@ -34,10 +37,10 @@
 			<nav>
 				<div class="nav">
 					<div class="brackets">
-						<a class="top-nav d-none d-md-block" href="index.html#work">Work</a>
-						<a class="top-nav d-none d-md-block" href="index.html#about">About</a>
-						<a class="top-nav d-none d-md-block" href="index.html#contact">Contact</a>
-						<a class="top-nav d-none d-md-block " href="https://www.linkedin.com/in/juliamaribernaus/"
+						<a class="top-nav" href="index.html#work">Work</a>
+						<a class="top-nav" href="index.html#about">About</a>
+						<a class="top-nav" href="index.html#contact">Contact</a>
+						<a class="top-nav" href="https://www.linkedin.com/in/juliamaribernaus/"
 							target="_blank">LinkedIn</a>
 					</div>
 						<a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank" role="button">Get in touch</a>
@@ -50,7 +53,7 @@
 	<main class="page-main">
 		<div id="hero" class="container">
 			<!--Open row that holds 2 columns-->
-			<picture class="d-none d-md-block hero-pic">
+			<picture class="hero-pic">
 				<!--Open Column Right -->
 				<source srcset="img/home/juliamaribernaus.png" media="(max-width:767px)"><img
 					src="img/home/juliamaribernaus.png" alt="Júlia Marí Bernaus">
