--- a/linsenpate.html
+++ b/linsenpate.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="css/normalize.css#">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/styles_lp.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300;700&display=swap"
+        rel="stylesheet">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
