Fixed layout issues Linsenpate

--- a/linsenpate.html
+++ b/linsenpate.html
@@ -7,20 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Júlia Marí Bernaus">
     <link href="img/favicon.ico" rel="shortcut icon">
-    <title>Júlia Marí Bernaus | UX/UI Designer | Berlin</title>
+    <title>Júlia Marí Bernaus | About</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
     <!-- Custom styles for this template go here -->
-    <link rel="stylesheet" href="css/normalize.css#">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/styles_lp.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300;700&display=swap"
         rel="stylesheet">
-
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -30,7 +29,8 @@
 
 </head>
 
-<body><!-- Header/Navigation -->
+<body>
+    <!-- Header/Navigation -->
     <header>
         <div id="main-nav">
             <div class="brackets">
@@ -39,10 +39,10 @@
             <nav>
                 <div class="nav">
                     <div class="brackets">
-                        <a class="top-nav d-none d-md-block" href="index.html#work">Work</a>
-                        <a class="top-nav d-none d-md-block" href="index.html#about">About</a>
-                        <a class="top-nav d-none d-md-block" href="index.html#contact">Contact</a>
-                        <a class="top-nav d-none d-md-block " href="https://www.linkedin.com/in/juliamaribernaus/"
+                        <a class="top-nav" href="index.html#work">Work</a>
+                        <a class="top-nav" href="index.html#about">About</a>
+                        <a class="top-nav" href="index.html#contact">Contact</a>
+                        <a class="top-nav" href="https://www.linkedin.com/in/juliamaribernaus/"
                             target="_blank">LinkedIn</a>
                     </div>
                     <a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
@@ -52,6 +52,7 @@
         </div>
         <!--end header-->
     </header>
+
     <!-- Hero -->
     <main>
         <section id="lp-intro" class="lp-intro-flex-grid container"><!--Open Intro--> 
