CSS animation improvements

--- a/linsenpate.html
+++ b/linsenpate.html
@@ -45,7 +45,7 @@
                         <a class="top-nav" href="https://www.linkedin.com/in/juliamaribernaus/"
                             target="_blank">LinkedIn</a>
                     </div>
-                    <a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
+                    <a class="button-nav button-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
                         role="button">Get in touch</a>
                 </div>
             </nav>
@@ -71,8 +71,8 @@
                 <p>Check out Linsenpate’s transformation further down the page.</p>
                 <!--End Text on Right Column-->
                 <div class="project-cta"> <!--Open CTAs on Right Column-->
-                    <a class="btn btn-primary" href="linsenpate.html#challenge" role="button">Keep on reading</a>
-                    <a class="btn btn-secondary" href="https://linsenpate.de" target="_blank" role="button">Visit linsenpate.de</a>
+                    <a class="button button-primary" href="linsenpate.html#challenge" role="button">Keep on reading</a>
+                    <a class="button button-secondary" href="https://linsenpate.de" target="_blank" role="button">Visit linsenpate.de</a>
                 </div>  <!--End CTAs on Right Column-->
             </div> <!--Close right column-->
             <div class="lp-intro-right"> <!--Open Left Column-->
@@ -185,7 +185,7 @@
         </section>
 
         <div id="mockups"><!--Open Before & After Section-->
-            <div class="lp-mockup-flex-grid-1"><!--Open New Design-->
+            <div class="lp-mockup-flex-grid-1 container"><!--Open New Design-->
                 <div class="mockup-box">
                     <div class="mockup1">
                         <picture>
@@ -502,9 +502,9 @@
             <!--Open Contact-->
             <h3>Did you like my work?</h3>
             <div class="contact-button-wrapper">
-                <a class="btn btn-primary contact-button left" href="mailto:hi@juliamaribernaus.com" target="_blank"
+                <a class="button button-primary contact-button left" href="mailto:hi@juliamaribernaus.com" target="_blank"
                     role="button">Shoot me an email</a>
-                <a class="btn btn-secondary contact-button right" href="https://www.linkedin.com/in/juliamaribernaus/"
+                <a class="button button-secondary contact-button right" href="https://www.linkedin.com/in/juliamaribernaus/"
                     target="_blank" role="button">Connect on LinkedIn</a>
             </div>
         </section>
