--- a/setting.html
+++ b/setting.html
@@ -46,7 +46,7 @@
                         <a class="top-nav d-none d-md-block " href="https://www.linkedin.com/in/juliamaribernaus/"
                             target="_blank">LinkedIn</a>
                     </div>
-                    <a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
+                    <a class="button-nav button-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
                         role="button">Get in touch</a>
                 </div>
             </nav>
@@ -70,12 +70,12 @@
                     <br>In Spring 2021 we launched a new design that communicated a more mature, established and complete service. We continue
                     to develop features together.
                     <br>
-                    <br>Check the resulting prototype here and dive deeper into the process furhter down the page.
+                    <br>Check the mobile wireframes in a basic prototype here and dive deeper into the process and desktop version furhter down the page.
                     </p>
                 <!--End Text on Right Column-->
                 <div class="project-cta"><!--Open CTAs on Right Column-->
-                    <a class="btn btn-primary project-cta" href="#" target="_blank" role="button">Keep on reading</a>
-                    <a class="btn btn-secondary project-cta" href="https://setting.io/" target="_blank" role="button">Visit setting.io</a>
+                    <a class="button button-primary project-cta" href="#" target="_blank" role="button">Keep on reading</a>
+                    <a class="button button-secondary project-cta" href="https://setting.io/" target="_blank" role="button">Visit setting.io</a>
                 </div><!--End CTAs on Right Column-->
             </div><!--Close right column-->
             <div class="st-intro-right d-none d-sm-block" ><!--Open Left Column-->
@@ -192,9 +192,9 @@
         <!--Open Contact-->
         <h3>Did you like my work?</h3>
         <div class="contact-button-wrapper">
-            <a class="btn btn-primary contact-button left" href="mailto:hi@juliamaribernaus.com" target="_blank"
+            <a class="button button-primary contact-button left" href="mailto:hi@juliamaribernaus.com" target="_blank"
                 role="button">Shoot me an email</a>
-            <a class="btn btn-secondary contact-button right" href="https://www.linkedin.com/in/juliamaribernaus/"
+            <a class="button button-secondary contact-button right" href="https://www.linkedin.com/in/juliamaribernaus/"
                 target="_blank" role="button">Connect on LinkedIn</a>
         </div>
     </section>
