Improvements in Setting Mobile View

--- a/setting.html
+++ b/setting.html
@@ -47,7 +47,7 @@
                             target="_blank">LinkedIn</a>
                     </div>
                     <a class="button-nav button-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
-                        role="button">Get in touch</a>
+                        role="button">Get in touch</a>                   
                 </div>
             </nav>
         </div>
@@ -78,11 +78,17 @@
                     <a class="button button-secondary project-cta" href="https://setting.io/" target="_blank" role="button">Visit setting.io</a>
                 </div><!--End CTAs on Right Column-->
             </div><!--Close right column-->
-            <div class="st-intro-right d-none d-sm-block" ><!--Open Left Column-->
+            <div class="st-intro-right mobile" ><!--Open Left Column-->
                 <iframe style="border: 0px;" width="400" height="700"
                     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FOoYnOXz8ZH1D3ErkTkL78J%2FSetting-Prototype-UI%3Fnode-id%3D2187%253A449%26viewport%3D89%252C406%252C0.02984790876507759%26scaling%3Dscale-down%26page-id%3D2187%253A448"
                     allowfullscreen></iframe>
-            </div><!--Close Left Column-->
+            </div>
+            <div class="not-mobile">
+                <picture><!--Open Hero Image-->
+                        <source srcset="img/setting/setting_project.png" media="(max-width:767px)"><img src="img/setting/setting_project.png" alt="Setting Design by Júlia Marí Bernaus">
+                    </picture> 
+            <div>
+                <!--Close Left Column-->
         </section><!--Close Intro Section-->
 
         <section id="challenge"><!--Open The Challenge-->
@@ -160,11 +166,43 @@
             </ul>
             </div><!--End of Right Column-->
         </section>
-        <section id="desktop-prototype" class="d-none d-sm-block" ><!--Open Desktop Prototype-->
+        <section id="wireframes">
+            <div class="container">
+            <h3>Desktop Wireframes</h3>
+            <p>Here you can see some of the wireframes for desktop.
+            <a class="button button-primary not-mobile wireframe-button" href="https://www.figma.com/proto/OoYnOXz8ZH1D3ErkTkL78J/Setting-Prototype-UI?kind=&node-id=753%3A681&page-id=753%3A1&scaling=scale-down&viewport=442%2C446%2C0.020680343732237816" target="_blank" role="button">To Desktop Prototype</a>
+            <div class="wireframes-flex-grid">
+            <picture class="wireframe">
+                <source srcset="img/setting/home.png" media="(max-width:767px)">
+                <img src="img/setting/home.png" alt="Setting Design by Júlia Marí Bernaus">
+            </picture>
+            <picture class="wireframe">
+                <source srcset="img/setting/custom.png" media="(max-width:767px)">
+                <img src="img/setting/custom.png" alt="Setting Design by Júlia Marí Bernaus">
+            </picture>
+            <picture class="wireframe">
+                <source srcset="img/setting/dpp.png" media="(max-width:767px)">
+                <img src="img/setting/dpp.png" alt="Setting Design by Júlia Marí Bernaus">
+            </picture>
+            <picture class="wireframe">
+                <source srcset="img/setting/pp.png" media="(max-width:767px)">
+                <img src="img/setting/pp.png" alt="Setting Design by Júlia Marí Bernaus">
+            </picture>
+            <picture class="wireframe">
+                <source srcset="img/setting/list_space.png" media="(max-width:767px)">
+                <img src="img/setting/list_space.png" alt="Setting Design by Júlia Marí Bernaus">
+            </picture>
+            <picture class="wireframe">
+                <source srcset="img/setting/about.png" media="(max-width:767px)">
+                <img src="img/setting/about.png" alt="Setting Design by Júlia Marí Bernaus">
+            </picture>
+            <div>
+        </section>
+
+        <section id="desktop-prototype" class="mobile" ><!--Open Desktop Prototype-->
             <div class="container">
                 <h3>Desktop Prototype</h3>
-                <p>Although it was only required from me to build wireframes, I decided to build a simple prototype. The reason behind was that the sign up flow was unclear to me. Thanks to this, we discovered that the sign up flow and functionality needed to be changed and we removed it temporarily. 
-                <br>Click on the blue areas to navigate through the prototype.</p>
+                <p>Although it was only required from me to build wireframes, I decided to build a simple prototype. The reason behind was that the sign up flow was unclear to me. Thanks to this, we discovered that the sign up flow and functionality needed to be changed and we removed it temporarily. Click on the blue areas to navigate through the prototype.</p>
                 <div class="iframe"><!--Open Desktop iFrame-->
                     <iframe style="border: none;" width="1200" height="800"
                         src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FOoYnOXz8ZH1D3ErkTkL78J%2FSetting-Prototype-UI%3Fnode-id%3D753%253A681%26viewport%3D442%252C446%252C0.020680343732237816%26scaling%3Dscale-down%26page-id%3D753%253A1"
@@ -176,10 +214,9 @@
         <section id="design-system" class="d-none d-sm-block"><!--Open Design System Prototype-->
             <div class="container">
                 <h3>Design System</h3>
-                <p>I created a Design System in a format that could be printed or sent to anyone who needed to make use of it. We have currently already used it for the photographer to understand the look & feel of the company.
-                <br>Use your right and left keyboard arrows to navigate through the Design System</p>
+                <p>I created a Design System in a format that could be printed or sent to anyone who needed to make use of it. We have currently already used it for the photographer to understand the look & feel of the company. Use your right and left keyboard arrows to navigate through the Design System</p>
                 <div class="iframe"><!--Open Design System iFrame-->
-                <iframe style="border: none;" width="1200" height="800"
+                <iframe style="border: none;" width="1200" height="700"
                     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FOoYnOXz8ZH1D3ErkTkL78J%2FSetting-Prototype-UI%3Fnode-id%3D2366%253A3%26viewport%3D44%252C462%252C0.016561182215809822%26scaling%3Dcontain%26page-id%3D1997%253A3897"
                     allowfullscreen>
                 </iframe>
