Validated CSS and Html files

--- a/setting.html
+++ b/setting.html
@@ -87,8 +87,7 @@
                 <picture><!--Open Hero Image-->
                         <source srcset="img/setting/setting_project.png" media="(max-width:767px)"><img src="img/setting/setting_project.png" alt="Setting Design by Júlia Marí Bernaus">
                     </picture> 
-            <div>
-                <!--Close Left Column-->
+            </div><!--Close Left Column-->
         </section><!--Close Intro Section-->
 
         <section id="challenge"><!--Open The Challenge-->
@@ -168,35 +167,36 @@
         </section>
         <section id="wireframes">
             <div class="container">
-            <h3>Desktop Wireframes</h3>
-            <p>Here you can see some of the wireframes for desktop.
-            <a class="button button-primary not-mobile wireframe-button" href="https://www.figma.com/proto/OoYnOXz8ZH1D3ErkTkL78J/Setting-Prototype-UI?kind=&node-id=753%3A681&page-id=753%3A1&scaling=scale-down&viewport=442%2C446%2C0.020680343732237816" target="_blank" role="button">To Desktop Prototype</a>
-            <div class="wireframes-flex-grid">
-            <picture class="wireframe">
-                <source srcset="img/setting/home.png" media="(max-width:767px)">
-                <img src="img/setting/home.png" alt="Setting Design by Júlia Marí Bernaus">
-            </picture>
-            <picture class="wireframe">
-                <source srcset="img/setting/custom.png" media="(max-width:767px)">
-                <img src="img/setting/custom.png" alt="Setting Design by Júlia Marí Bernaus">
-            </picture>
-            <picture class="wireframe">
-                <source srcset="img/setting/dpp.png" media="(max-width:767px)">
-                <img src="img/setting/dpp.png" alt="Setting Design by Júlia Marí Bernaus">
-            </picture>
-            <picture class="wireframe">
-                <source srcset="img/setting/pp.png" media="(max-width:767px)">
-                <img src="img/setting/pp.png" alt="Setting Design by Júlia Marí Bernaus">
-            </picture>
-            <picture class="wireframe">
-                <source srcset="img/setting/list_space.png" media="(max-width:767px)">
-                <img src="img/setting/list_space.png" alt="Setting Design by Júlia Marí Bernaus">
-            </picture>
-            <picture class="wireframe">
-                <source srcset="img/setting/about.png" media="(max-width:767px)">
-                <img src="img/setting/about.png" alt="Setting Design by Júlia Marí Bernaus">
-            </picture>
-            <div>
+                <h3>Desktop Wireframes</h3>
+                <p>Here you can see some of the wireframes for desktop.
+                <a class="button button-primary not-mobile wireframe-button" href="https://www.figma.com/proto/OoYnOXz8ZH1D3ErkTkL78J/Setting-Prototype-UI?kind=&node-id=753%3A681&page-id=753%3A1&scaling=scale-down&viewport=442%2C446%2C0.020680343732237816" target="_blank" role="button">To Desktop Prototype</a>
+                <div class="wireframes-flex-grid">
+                    <picture class="wireframe">
+                        <source srcset="img/setting/home.png" media="(max-width:767px)">
+                        <img src="img/setting/home.png" alt="Setting Design by Júlia Marí Bernaus">
+                    </picture>
+                    <picture class="wireframe">
+                        <source srcset="img/setting/custom.png" media="(max-width:767px)">
+                        <img src="img/setting/custom.png" alt="Setting Design by Júlia Marí Bernaus">
+                    </picture>
+                    <picture class="wireframe">
+                        <source srcset="img/setting/dpp.png" media="(max-width:767px)">
+                        <img src="img/setting/dpp.png" alt="Setting Design by Júlia Marí Bernaus">
+                    </picture>
+                    <picture class="wireframe">
+                        <source srcset="img/setting/pp.png" media="(max-width:767px)">
+                        <img src="img/setting/pp.png" alt="Setting Design by Júlia Marí Bernaus">
+                    </picture>
+                    <picture class="wireframe">
+                        <source srcset="img/setting/list_space.png" media="(max-width:767px)">
+                        <img src="img/setting/list_space.png" alt="Setting Design by Júlia Marí Bernaus">
+                    </picture>
+                    <picture class="wireframe">
+                        <source srcset="img/setting/about.png" media="(max-width:767px)">
+                        <img src="img/setting/about.png" alt="Setting Design by Júlia Marí Bernaus">
+                    </picture>
+                </div>
+            </div>
         </section>
 
         <section id="desktop-prototype" class="mobile" ><!--Open Desktop Prototype-->
