--- a/imprint.html
+++ b/imprint.html
@@ -2,23 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Júlia Marí Bernaus">
-    <link href="../portfolio/img/favicon.ico" rel="shortcut icon">
-    <title>Júlia Marí Bernaus | UX/UI Designer | Berlin</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="Júlia Marí Bernaus">
+	<link href="img/favicon.ico" rel="shortcut icon">
+	<title>Júlia Marí Bernaus | Animation</title>
 
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
-        integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+	<!-- Bootstrap core CSS -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-    <!-- Custom styles for this template go here -->
-    <link rel="stylesheet" href="../portfolio/css/normalize.css#">
-    <link rel="stylesheet" href="../portfolio/css/styles.css">
+	<!-- Custom styles for this template go here -->
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/styles.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
+	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
@@ -26,28 +28,31 @@
 </head>
 
 <body>
-    <!-- Header/Navigation -->
-    <header>
-        <div class="main-nav">
-            <a class="logo" href="../portfolio/index.html">Júlia Mari Bernaus</a>
-            <nav>
-                <ul>
-                    <li><a class="top-nav" href="../portfolio/index.html#work">Work</a></li>
-                    <li><a class="top-nav" href="../portfolio/index.html#about">About</a></li>
-                    <li><a class="top-nav" href="../portfolio/index.html#contact">Contact</a></li>
-                    <li><a class="top-nav" href="https://www.linkedin.com/in/juliamaribernaus/"
-                            target="_blank">LinkedIn</a></li>
-                    <li><a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
-                            role="button">Get in touch</a></li>
-                </ul>
-            </nav>
-        </div>
-        <!--end header-->
-    </header>
+	<!-- Header/Navigation -->
+	<header>
+		<div id="main-nav">
+			<div class="brackets">
+				<a class="logo" href="index.html">Júlia Mari Bernaus</a>
+			</div>
+			<nav>
+				<div class="nav">
+					<div class="brackets">
+						<a class="top-nav" href="index.html#work">Work</a>
+						<a class="top-nav" href="index.html#about">About</a>
+						<a class="top-nav" href="index.html#contact">Contact</a>
+						<a class="top-nav" href="https://www.linkedin.com/in/juliamaribernaus/"
+							target="_blank">LinkedIn</a>
+					</div>
+						<a class="button-nav button-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank" role="button">Get in touch</a>
+				</div>
+			</nav>
+		</div>
+		<!--end header-->
+	</header>
 
     <!-- Hero -->
     <main>
-        <div class="imprint-wapper">
+        <div id="imprint-page">
             <div class="imprint-inner">
                 <h2>Impressum</h2>
                 <br>
@@ -64,18 +69,13 @@
     </main>
 
     <!-- Footer  -->
-    <footer>
-
-        <div class="footer">
-            <div>
-                <h6>©2021 All rights reserved</h6>
-                <a href="../portfolio/imprint.html" target="_blank">
-                    <h6>Imprint</h6>
-                </a>
-            </div>
-        </div>
-    </footer>
-    <!--end of footer-->
+	<footer>
+		<div class="imprint-page imprint"><!--Open Imprint-->
+				<h6>©2021 All rights reserved</h6>
+				<a href="imprint.html" target="_blank"><h6 class="imprint-underline">Imprint</h6></a>
+		</div><!--End Imprint-->
+	</footer>
+	<!--end of footer-->
 </body>
 
 </html>
