Improved animations and Project Section on Index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
-	 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
@@ -80,8 +80,8 @@
 					<!--Open Project 1-->
 					<a href="linsenpate.html">
 						<picture>
-							<source srcset="img/home/linsenpate_328x242.png" media="(max-width:767px)">
-							<img src="img/home/linsenpate_640x471.png" alt="Linsenpate">
+							<source srcset="img/home/linsenpate_328x246.png" media="(max-width:767px)">
+							<img src="img/home/linsenpate_800x600.png" alt="Linsenpate">
 						</picture>
 					</a>
 					<div class="project-content">
@@ -95,8 +95,8 @@
 				<div class="project"><!--Open Project 2-->
 					<a href="setting.html">
 						<picture>
-							<source srcset="img/home/setting_328x242.png" media="(max-width:767px)">
-							<img src="img/home/setting_640x471.png" alt="Linsenpate">
+							<source srcset="img/home/setting_328x246.png" media="(max-width:767px)">
+							<img src="img/home/setting_800x600.png" alt="Setting">
 						</picture>
 					</a>
 					<div class="project-content">
@@ -108,33 +108,44 @@
 					</div><!--end Project Content 2-->
 				</div><!--end Project 2-->
 				<div class="project"><!--Open Project 3-->
-					<a href="shore.html">
+					<div class="image">
 						<picture>
-							<source srcset="img/home/shore_328x242.png" media="(max-width:767px)">
-							<img src="img/home/shore_640x471.png" alt="Linsenpate">
+							<source srcset="img/home/shore_328x246.png" media="(max-width:767px)">
+							<img src="img/home/shore_800x600.png" alt="Shore">
 						</picture>
-					</a>
+						<div class="image__overlay image__overlay--blur">
+							<div class="image__title">
+								<h2>Coming Soon</h2>
+							</div>
+						</div>
+					</div>
 					<div class="project-content"><!--open Project Content 3-->
-							<h2><a href="shore.html">Shore</a></h2>
+							<h2 style="color:#0C0093;">Shore</h2><!--a href="shore.html">-->
 							<p>App case study for non-professional watersports aficionados.</p>
 							<p class="label-big">2020</p>
 							<p class="label-role">UX/UI Designer</p>
 					</div><!--end Project Content 3-->
 				</div><!--end Project 3-->
 				<div class="project"><!--Open Project 4-->
-					<a href="shore.html">
-						<picture>
-							<source srcset="img/home/artconnect_328x242.png" media="(max-width:767px)">
-							<img src="img/home/artconnect_640x471.png" alt="Linsenpate">
-						</picture>
-					</a>	
+					<div class="image">
+							<picture>
+								<source srcset="img/home/artconnect_328x246.png" media="(max-width:767px)">
+								<img src="img/home/artconnect_800x600.png" alt="Artconnect" class="image__img">
+							</picture>
+							<div class="image__overlay image__overlay--blur">
+								<div class="image__title">
+									<h2>Coming Soon</h2>
+								</div>
+							</div>
+					</div>
 					<div class="project-content">
-							<h2><a href="artconnect.html">Artconnect</a></h2>
+							<h2 style="color:#0C0093;">Artconnect</h2><!--<a href="artconnect.html"></a>-->
 							<p>Artconnect is a global social network for creatives.</p>
 							<p class="label-big">2011-2020</p>
 							<p class="label-role">Founder, Product Manager, UX/UI Design</p>
 					</div><!--end Project Content 4-->
 				</div><!--end Project 4-->
+				
 			</div>
 		</section>
 		<!--end work-->
